# medvision

./: Dockerfile  LICENSE  compose.yml  dataset.py  metrics.py  requirements-dev.txt  train.py  trainer.py  utils.py
application/: CMakeLists.txt  README.md  setup.sh
application/resources/glsl/: fragment.frag  vertex.vert
application/src/: exlibs.h  glad.c  main.cpp  standard.h
application/src/components/: camera_component.h  object_component.h  physics_component.h  render_component.h  transform_component.h
application/src/controller/: app.cpp  app.h
application/src/debug/: debug.cpp  debug.h
application/src/factory/: factory.cpp  factory.h
application/src/renderer/buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
application/src/renderer/shaders/: shader.cpp  shader.h
application/src/renderer/texture/: texture.cpp  texture.h
application/src/systems/: render_system.cpp  render_system.h
application/src/test/: test.h  testClearColor.cpp  testClearColor.h
configs/: train_config.yaml
dataset/: README.md  mbrains.py
deployment/: convert.py  tensorRT.py
deployment/client/: client.py
deployment/model-analyzer/: cmds.md
deployment/model-repository/RoTransNet_MSBrain_128/: config.pbtxt
deployment/model-repository/UNet_ImageCHD_128/: config.pbtxt
networks/: __init__.py
networks/RoTransNet/: RoTransNet.py  config.py  linear_embedding.py  reconstruction.py  rotatory_attention.py  uct_decoder.py
networks/UNet/: UNet.py
networks/UNet_plusplus/: UNet_plusplus.py
(+2 files in other folders)
